--- a/gamesfestarcade/Config/DefaultEngine.ini
+++ b/gamesfestarcade/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Core/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/Core/Maps/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/Core/GM_Tamagotchi.GM_Tamagotchi_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
