--- a/gamesfestarcade/Config/DefaultEngine.ini
+++ b/gamesfestarcade/Config/DefaultEngine.ini
@@ -39,7 +39,7 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=True
 
 r.GenerateMeshDistanceFields=True
 
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 
 r.ReflectionMethod=1
 
@@ -50,6 +50,9 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.DefaultFeature.MotionBlur=False
+r.Mobile.AntiAliasing=0
+r.DefaultFeature.AutoExposure=False
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
