--- a/gamesfestarcade/Config/DefaultEngine.ini
+++ b/gamesfestarcade/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Core/Maps/MainLevel.MainLevel
-EditorStartupMap=/Game/Core/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/Core/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Core/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Core/GM_Tamagotchi.GM_Tamagotchi_C
 GameInstanceClass=/Game/Core/BPs/BP_GameInstance.BP_GameInstance_C
 
